Fix spacing

--- a/src/components/Global/HomeHero/index.scss
+++ b/src/components/Global/HomeHero/index.scss
@@ -92,7 +92,7 @@
 
     &+div,
     &+section {
-      padding-top: 600px !important;
+      padding-top: 500px !important;
     }
   }
 }
